    is left unchanged.  non-generative methods remain as well.  
  - the internals of select/union vastly simplified - all decision making
    regarding "is subquery" and "correlation" pushed to SQL generation phase.
    select() elements are now *never* mutated by their enclosing containers
    or by any dialect's compilation process [ticket:52] [ticket:569]
  - result sets make a better attempt at matching the DBAPI types present
    in cursor.description to the TypeEngine objects defined by the dialect,
    which are then used for result-processing. Note this only takes effect 
    for textual SQL; constructed SQL statements always have an explicit type map.  
  - result sets from CRUD operations close their underlying cursor immediately.
    will also autoclose the connection if defined for the operation; this 
    allows more efficient usage of connections for successive CRUD operations
    with less chance of "dangling connections".
  - Column defaults and onupdate Python functions (i.e. passed to ColumnDefault)
    may take zero or one arguments; the one argument is the ExecutionContext,
    from which you can call "context.parameters[someparam]" to access the other
    bind parameter values affixed to the statement [ticket:559]
  - added "explcit" create/drop/execute support for sequences 
    (i.e. you can pass a "connectable" to each of those methods
    on Sequence)
  - better quoting of identifiers when manipulating schemas
  - standardized the behavior for table reflection where types can't be located;
    NullType is substituted instead, warning is raised.
  - ColumnCollection (i.e. the 'c' attribute on tables) follows dictionary
    semantics for "__contains__" [ticket:606]
    
- engines
  - Connections gain a .properties collection, with contents scoped to the
    lifetime of the underlying DBAPI connection
- extensions
  - proxyengine is temporarily removed, pending an actually working
    replacement.